test/functions/diten/whereClauseIgnored.good
whereClauseIgnored.chpl:1: error: illegal where clause on non-generic function
